--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install python-pip python-dev build-essential
   - sudo pip install --upgrade pip
-  - sudo pip install awscli --upgrade
+  - pip install awscli --upgrade
+  - pip install awsebcli --upgrade
+  - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+  - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+  - aws configure set default.region $AWS_REGION
 
 script: ./travis-script.sh
