--- a/api-dx/build.gradle
+++ b/api-dx/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.palantir.docker'
@@ -45,4 +46,8 @@ docker {
     name "${project.group}/${jar.baseName}"
     files jar.archivePath
     buildArgs(['JAR_FILE': "${jar.archiveName}"])
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.4'
 }
