--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ before_install:
   - mkdir ~/.aws
   - printf "[kms]\naws_access_key_id="$AWS_ACCESS_KEY_ID"\naws_secret_access_key="$AWS_SECRET_ACCESS_KEY > ~/.aws/credentials
   - printf "[profile kms]\nregion="$AWS_REGION"\noutput=json" > ~/.aws/config
-  - curl -o /usr/local/bin/ecs-cli https://s3.amazonaws.com/amazon-ecs-cli/ecs-cli-linux-amd64-latest
+  - sudo curl -o /usr/local/bin/ecs-cli https://s3.amazonaws.com/amazon-ecs-cli/ecs-cli-linux-amd64-latest
 
 script: ./travis-script.sh
