--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,6 @@ before_install:
   - printf "[kms]\naws_access_key_id="$AWS_ACCESS_KEY_ID"\naws_secret_access_key="$AWS_SECRET_ACCESS_KEY > ~/.aws/credentials
   - printf "[profile kms]\nregion="$AWS_REGION"\noutput=json" > ~/.aws/config
   - sudo curl -o /usr/local/bin/ecs-cli https://s3.amazonaws.com/amazon-ecs-cli/ecs-cli-linux-amd64-latest
+  - sudo chmod a+x /usr/local/bin/ecs-cli
 
 script: ./travis-script.sh
