--- a/api-dx/Dockerfile
+++ b/api-dx/Dockerfile
@@ -2,10 +2,10 @@ FROM ubuntu:16.04
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y  software-properties-common && \
-    add-apt-repository ppa:webupd8team/java -y && \
+    add-apt-repository ppa:linuxuprising/java -y && \
     apt-get update && \
-    echo oracle-java7-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections && \
-    apt-get install -y oracle-java9-installer && \
+    echo oracle-java10-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections && \
+    apt-get install -y oracle-java10-installer && \
     apt-get clean
 #FROM openjdk:8-jdk-alpine
 RUN apt-get -qq update
