--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ services:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install python-pip python-dev build-essential
-  - sudo pip install pip --upgrade
-  - sudo pip install awscli --upgrade
-  - sudo pip install dxpy --upgrade
+  - sudo -H pip install pip --upgrade
+  - sudo -H pip install awscli --upgrade
+  - sudo -H pip install dxpy --upgrade
   - mkdir ~/.aws
   - printf "[kms]\naws_access_key_id="$AWS_ACCESS_KEY_ID"\naws_secret_access_key="$AWS_SECRET_ACCESS_KEY > ~/.aws/credentials
   - printf "[profile kms]\nregion="$AWS_REGION"\noutput=json" > ~/.aws/config
