--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 language: java
 
 jdk:
-  - oraclejdk9
+  - oraclejdk10
 
 python:
   - 3.4
@@ -18,8 +18,8 @@ before_install:
   - sudo -H pip install awscli --upgrade
   - sudo -H pip install dxpy --upgrade
   - mkdir ~/.aws
-  - printf "[kms]\naws_access_key_id="$AWS_ACCESS_KEY_ID"\naws_secret_access_key="$AWS_SECRET_ACCESS_KEY > ~/.aws/credentials
-  - printf "[profile kms]\nregion="$AWS_REGION"\noutput=json" > ~/.aws/config
+  - printf "[genetraps]\naws_access_key_id="$AWS_ACCESS_KEY_ID"\naws_secret_access_key="$AWS_SECRET_ACCESS_KEY > ~/.aws/credentials
+  - printf "[profile genetraps]\nregion="$AWS_REGION"\noutput=json" > ~/.aws/config
   - sudo curl -o /usr/local/bin/ecs-cli https://s3.amazonaws.com/amazon-ecs-cli/ecs-cli-linux-amd64-latest
   - sudo chmod a+x /usr/local/bin/ecs-cli
 
