--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ RemoteSystemsTempFiles/
 
 docker-compose.yml
 
+# api-explorare
+api-explorare/bin/
+api-explorare/.settings/
+api-explorare/danlos
+api-explorare/.project
+api-explorare/.classpath
+
 # Compiled class file
 *.class
 
