--- a/client-index/Dockerfile
+++ b/client-index/Dockerfile
@@ -3,11 +3,11 @@ FROM    ubuntu:18.04
 # Install python3
 RUN     apt-get update
 RUN     apt-get install -y python3
+RUN     apt-get install -y curl
 
 # Copy html
-ADD static/ /src
-RUN cd /src
+ADD src/ /src
+WORKDIR /src
 
 # Run http server on port 8080
-EXPOSE  8080
-CMD ["python3", "-m", "http.server", "8080"]
+CMD ["python3", "-m", "http.server"]
