--- a/aws-conf/ecs-params.yml
+++ b/aws-conf/ecs-params.yml
@@ -1,6 +1,6 @@
 version: 1
 task_definition:
-  task_execution_role: ecsExecutionRole
+  task_execution_role: ecsTaskExecutionRole
   ecs_network_mode: awsvpc
   task_size:
     mem_limit: 1 GB
