--- a/api-dx/build.gradle
+++ b/api-dx/build.gradle
@@ -14,6 +14,11 @@ buildscript {
 	}
 }
 
+lombok {
+	version = 1.18.0
+	sha256 = ""
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
