--- a/client-explorare/package.json
+++ b/client-explorare/package.json
@@ -1,59 +1,60 @@
 {
-  "name": "client-explorare",
-  "version": "0.1.0",
-  "description": "Explorare client",
-  "author": "Marcin Piechota <piechota.marcin@gmail.com>",
-  "private": true,
+  "name": "angular-quickstart",
+  "version": "1.0.0",
+  "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
-    "watchify": "watchify -vd -p browserify-hmr -e src/main.js -o dist/build.js",
-    "serve": "http-server",
-    "dev": "npm-run-all --parallel watchify serve",
-    "lint": "eslint --ext .js,.vue src test/unit",
-    "test": "karma start karma.conf.js",
-    "build": "cross-env NODE_ENV=production browserify -g envify -p [ vueify/plugins/extract-css -o dist/build.css ] -e src/main.js | uglifyjs -c warnings=false -m > dist/build.js"
+    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "e2e": "tsc && concurrently \"http-server -s\" \"protractor protractor.config.js\" --kill-others --success first",
+    "lint": "tslint ./app/**/*.ts -t verbose",
+    "lite": "lite-server",
+    "pree2e": "webdriver-manager update",
+    "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
+    "test-once": "tsc && karma start karma.conf.js --single-run",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
   },
-  "browserify": {
-    "transform": [
-      "babelify",
-      "vueify"
-    ]
-  },
-  "browser": {
-    "vue": "vue/dist/vue.common.js"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "vue": "^2.0.1"
+    "@angular/common": "~2.4.0",
+    "@angular/compiler": "~2.4.0",
+    "@angular/core": "~2.4.0",
+    "@angular/forms": "~2.4.0",
+    "@angular/http": "~2.4.0",
+    "@angular/platform-browser": "~2.4.0",
+    "@angular/platform-browser-dynamic": "~2.4.0",
+    "@angular/router": "~3.4.0",
+    "angular-in-memory-web-api": "~0.2.2",
+    "angular2-clipboard": "^2.0.14",
+    "angular2-modal": "^2.0.3",
+    "core-js": "^2.4.1",
+    "ng2-auto-complete": "^0.9.0",
+    "ng2-bootstrap": "^1.1.16-11",
+    "ngx-clipboard": "^5.0.8",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.0.1",
+    "systemjs": "0.19.40",
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "axios": "^0.17.1",
-    "babel-core": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-runtime": "^6.0.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.1.0",
-    "browserify-hmr": "^0.3.1",
-    "cross-env": "^2.0.0",
-    "envify": "^3.4.1",
-    "es6-promise": "^4.1.1",
-    "eslint": "^3.3.0",
-    "eslint-config-standard": "^5.3.5",
-    "eslint-plugin-html": "^1.5.2",
-    "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-standard": "^2.0.0",
+    "concurrently": "^3.1.0",
+    "lite-server": "^2.2.2",
+    "typescript": "~2.0.10",
+    "canonical-path": "0.0.2",
     "http-server": "^0.9.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.2.0",
-    "karma-browserify": "^5.1.0",
+    "tslint": "^3.15.1",
+    "lodash": "^4.16.4",
+    "jasmine-core": "~2.4.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-spec-reporter": "0.0.26",
-    "npm-run-all": "^2.3.0",
-    "phantomjs-prebuilt": "^2.1.3",
-    "proxyquireify": "^3.0.1",
-    "uglify-js": "^2.5.0",
-    "vueify": "^9.0.0",
-    "watchify": "^3.4.0"
-  }
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~4.0.14",
+    "rimraf": "^2.5.4",
+    "@types/node": "^6.0.46",
+    "@types/jasmine": "^2.5.38"
+  },
+  "repository": {}
 }
