--- a/api-explorare/build.gradle
+++ b/api-explorare/build.gradle
@@ -1,25 +1,24 @@
 buildscript {
+    
     repositories {
         mavenCentral()
     }
+
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'spring-boot'
+apply plugin: org.springframework.boot.gradle.plugin.SpringBootPlugin
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
- 
-version = '1.0'
-jar {
-    manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart',
-                   'Implementation-Version': version
-    }
+sourceCompatibility = 1.10
+targetCompatibility = 1.10
+
+bootJar {
+    baseName = 'app'
+    version =  'latest'
 }
 
 repositories {
@@ -28,10 +27,10 @@ repositories {
 
 dependencies {
 	// spring boot
-	compile("org.springframework.boot:spring-boot-starter-web")
-	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-    compile("org.springframework.boot:spring-boot-devtools")
-    compile("org.springframework.boot:spring-boot-starter-test")
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.3.RELEASE'
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.0.3.RELEASE'
+        compile 'javax.xml.bind:jaxb-api:2.3.0'
     
     // gradle quickstart
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
@@ -53,6 +52,7 @@ dependencies {
     
     //io utils
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
+ 
     
 }
 
@@ -69,6 +69,3 @@ uploadArchives {
     }
 }
 
-springBoot {
-    mainClass = "pl.intelliseq.explorare.ExplorareServer"
-}
