--- a/aws-conf/docker-compose-template.yml
+++ b/aws-conf/docker-compose-template.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   client-index:
-    image: clientIndexImageTag
+    image: imageTag
     ports:
       - "portTag:portTag"
     logging:
