--- a/api-security/src/main/resources/application.properties
+++ b/api-security/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.host=mongo.intelliseq.pl
 spring.data.mongodb.database=test
 spring.data.mongodb.authenticationDatabase=admin
+
+server.port=8088
