--- a/api-dx/build.gradle
+++ b/api-dx/build.gradle
@@ -61,10 +61,18 @@ dependencies {
     // security resource server
     compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.3.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.9.RELEASE'
-    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
+    compile group: 'org.springframework', name: 'spring-context-support', version: '4.1.3.RELEASE'
     compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0.1'
     compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
     compile group: 'javax.activation', name: 'activation', version: '1.1.1'
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.390'
+    compile("org.springframework:spring-jdbc")
+    compile("com.h2database:h2")
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+
+
 }
 
 docker {
