--- a/api-security/build.gradle
+++ b/api-security/build.gradle
@@ -4,9 +4,13 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("io.franzbecker:gradle-lombok:1.14")
     }
 }
 
@@ -15,10 +19,16 @@ apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "io.franzbecker.gradle-lombok"
 
 group = 'pl.intelliseq.genetraps.api'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 10
+
+lombok {
+    version = "1.18.2"
+    sha256 = ""
+}
 
 repositories {
     mavenCentral()
@@ -29,12 +39,7 @@ dependencies {
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.0.3.RELEASE'
     testCompile group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
 
-
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb', version: '2.0.3.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE'
-
-    compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '2.0.8.RELEASE'
-//    compile group: 'org.springframework.data', name: 'spring-data-commons', version: '2.0.8.RELEASE'
 
     compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.3.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.9.RELEASE'
@@ -44,9 +49,13 @@ dependencies {
 
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
     compile group: 'javax.activation', name: 'activation', version: '1.1.1'
-
-    compile group: 'org.mongodb', name: 'bson', version: '3.8.0'
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
     compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+
+
+    compile("org.springframework:spring-jdbc")
+    compile("com.h2database:h2")
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
 
 }
