--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,9 @@ local.properties
 **/.idea
 
 # User-specific stuff
+**/.idea/**/misc.xml
+**/.idea/**/modules.xml
+**/.idea/**/compiler.xml
 **/.idea/**/workspace.xml
 **/.idea/**/tasks.xml
 **/.idea/**/usage.statistics.xml
