--- a/api-dx/build.gradle
+++ b/api-dx/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.3.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.9.RELEASE'
     compile group: 'org.springframework', name: 'spring-context-support', version: '4.1.3.RELEASE'
+    compile group: 'org.springframework', name: 'spring-webflux', version: '5.0.8.RELEASE'
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
     compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0.1'
     compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
