--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
 - sudo -H pip install --upgrade --force-reinstall pip==9.0.3
 - sudo -H pip install awscli --upgrade
 - sudo -H pip install dxpy --upgrade
+- sudo -H pip install 'requests[security]'
 - curl -s api.sdkman.io | bash
 - source /home/travis/.sdkman/bin/sdkman-init.sh
 - sdk list gradle
