Trying to get rid of thos messy ssl python messages

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ services:
 before_install:
 - sudo apt-get -qq update
 - sudo apt-get install python-pip python-dev build-essential
+- sudo apt-get install python-dev libffi-dev libssl-dev
 - sudo -H pip install --upgrade --force-reinstall pip==9.0.3
 - sudo -H pip install awscli --upgrade
 - sudo -H pip install dxpy --upgrade
