--- a/api-dx/build.gradle
+++ b/api-dx/build.gradle
@@ -46,8 +46,11 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
     testCompile group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.0.3.RELEASE'
+    testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '4.0.0.RELEASE'
+
 
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
@@ -58,7 +61,6 @@ dependencies {
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE'
-    // security resource server
     compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.3.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.9.RELEASE'
     compile group: 'org.springframework', name: 'spring-context-support', version: '4.1.3.RELEASE'
@@ -68,8 +70,7 @@ dependencies {
     compile group: 'javax.activation', name: 'activation', version: '1.1.1'
     compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
     compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.390'
-    compile("org.springframework:spring-jdbc")
-    compile("com.h2database:h2")
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.0.9.RELEASE'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
 
 
