--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
 - sudo apt-get -qq update
 - sudo apt-get install python-pip python-dev build-essential
 - sudo apt-get install python-dev libffi-dev libssl-dev
+- sudo apt-get install python-urllib3
 - sudo -H pip install --upgrade --force-reinstall pip==9.0.3
 - sudo -H pip install awscli --upgrade
 - sudo -H pip install dxpy --upgrade
