--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ sudo: required
 language: java
 jdk:
 - oraclejdk10
-python:
-- 2.7.13
 services:
 - docker
 before_install:
+- sudo add-apt-repository ppa:jonathonf/python-2.7
+- sudo apt-get -qq update
+- sudo apt-get install python2.7
 - sudo apt-get -qq update
 - sudo apt-get install python-pip python-dev build-essential
 - sudo apt-get install python-dev libffi-dev libssl-dev
