--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jdk:
 services:
 - docker
 before_install:
-- sudo add-apt-repository ppa:jonathonf/python-2.7
+- yes | sudo add-apt-repository ppa:jonathonf/python-2.7
 - sudo apt-get -qq update
 - sudo apt-get install python2.7
 - sudo apt-get -qq update
