--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ services:
 before_install:
 - yes | sudo add-apt-repository ppa:jonathonf/python-2.7
 - sudo apt-get -qq update
-- sudo apt-get install python2.7
-- sudo apt-get -qq update
+- sudo apt-get install python python2.7
+- sudo apt-get install python-six
 - sudo apt-get install python-urllib3
 - sudo apt-get install python-requests
 - sudo apt-get install python-pip
