--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
 - sudo apt-get install python-requests
 - sudo apt-get install python-pip
 - sudo apt-get install python-dev libffi-dev libssl-dev
+- sudo -H pip install urllib3[secure]
 - sudo -H pip install --upgrade --force-reinstall pip==9.0.3
 - sudo -H pip install awscli --upgrade
 - sudo -H pip install dxpy --upgrade
