--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,13 @@ services:
 before_install:
 - sudo apt-get -qq update
 - sudo apt-get update
-- sudo apt-get install python3
+- cd /tmp
+- wget https://www.python.org/ftp/python/2.7.9/Python-2.7.9.tgz
+- tar xfz Python-2.7.9.tgz
+- cd Python-2.7.9/
+- ./configure --prefix /usr/local/lib/python2.7.9
+- make
+- make install
 - sudo apt-get install python-six
 - sudo apt-get install python-urllib3
 - sudo apt-get install python-requests
