--- a/.travis.yml
+++ b/.travis.yml
@@ -27,14 +27,14 @@ before_install:
 - sudo -H pip install --user dxpy --upgrade
 - sudo -H pip install --user 'requests[security]'
 - curl -s api.sdkman.io | bash
-- sudo source /home/travis/.sdkman/bin/sdkman-init.sh
+- source /home/travis/.sdkman/bin/sdkman-init.sh
 - yes | sudo add-apt-repository ppa:linuxuprising/java
 - sudo apt-get -qq update
 - sudo apt-get install oracle-java10-installer
 - sudo apt-get install oracle-java10-set-default
 - java -version
-- sudo sdk install gradle 4.8.1
-- sudo sdk default gradle 4.8.1
+- sdk install gradle 4.8.1
+- sdk default gradle 4.8.1
 - mkdir ~/.aws
 - printf "[genetraps]\naws_access_key_id="$AWS_ACCESS_KEY_ID"\naws_secret_access_key="$AWS_SECRET_ACCESS_KEY
   > ~/.aws/credentials
