--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ branches:
   - feature-travis-api-dx-build
   - feature-tests
 sudo: required
-language: python
-python:
-- "2.7.14"
+language: java
 jdk:
 - oraclejdk10
 services:
@@ -17,7 +15,6 @@ services:
 before_install:
 - sudo apt-get -qq update
 - sudo apt-get install python-six
-- sudo apt-get install python-urllib3
 - sudo apt-get install python-requests
 - sudo apt-get install python-pip
 - sudo apt-get install python-dev libffi-dev libssl-dev
@@ -28,11 +25,6 @@ before_install:
 - sudo -H pip install --user 'requests[security]'
 - curl -s api.sdkman.io | bash
 - source /home/travis/.sdkman/bin/sdkman-init.sh
-- yes | sudo add-apt-repository ppa:linuxuprising/java
-- sudo apt-get -qq update
-- sudo apt-get install oracle-java10-installer
-- sudo apt-get install oracle-java10-set-default
-- java -version
 - sdk install gradle 4.8.1
 - sdk default gradle 4.8.1
 - mkdir ~/.aws
