--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
 - source /home/travis/.sdkman/bin/sdkman-init.sh
 - sdk install gradle 4.10.2
 - sdk default gradle 4.10.2
+- gradle --version
 - mkdir ~/.aws
 - printf "[genetraps]\naws_access_key_id="$AWS_ACCESS_KEY_ID"\naws_secret_access_key="$AWS_SECRET_ACCESS_KEY
   > ~/.aws/credentials
