--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ services:
 - docker
 before_install:
 - sudo apt-get -qq update
+- sudo apt-get install python2.7
 - sudo apt-get install python-six
 - sudo apt-get install python-requests
 - sudo apt-get install python-pip
