--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,13 @@ services:
 - docker
 before_install:
 - sudo apt-get -qq update
-- sudo apt-get install python2.7
+- sudo apt-get install build-essential checkinstall
+- sudo apt-get install libreadline-gplv2-dev libncursesw5-dev libssl-dev libsqlite3-dev tk-dev libgdbm-dev libc6-dev libbz2-dev
+- sudo wget https://www.python.org/ftp/python/2.7.14/Python-2.7.14.tgz
+- sudo tar xzf Python-2.7.14.tgz
+- cd Python-2.7.14
+- sudo ./configure --enable-optimizations
+- sudo make altinstall
 - sudo apt-get install python-six
 - sudo apt-get install python-requests
 - sudo apt-get install python-pip
