aws fileupload and others, and other minor changes

--- a/api-dx/build.gradle
+++ b/api-dx/build.gradle
@@ -78,7 +78,8 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compile group: 'com.google.guava', name: 'guava', version: '27.0-jre'
 
-
+    // aws
+    compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.492'
 
 
 }
