--- a/api-dx/build.gradle
+++ b/api-dx/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compile group: 'com.google.guava', name: 'guava', version: '27.0-jre'
 
+    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
     // aws
     compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.492'
 
