--- a/api-dx/build.gradle
+++ b/api-dx/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '27.0-jre'
 
     compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.12'
     // aws
     compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.492'
 
