--- a/api-dx/build.gradle
+++ b/api-dx/build.gradle
@@ -54,7 +54,6 @@ dependencies {
 
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version:'2.7.4'
-    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
@@ -93,6 +92,6 @@ docker {
     buildArgs(['JAR_FILE': "${jar.archiveName}"])
 }
 
-task wrapper(type: Wrapper) {
+wrapper {
     gradleVersion = '4.7'
 }
