--- a/api-dx/src/test/resources/application.properties
+++ b/api-dx/src/test/resources/application.properties
@@ -1,4 +1,11 @@
 
+bucket.default=iseq
+samples.folder=samples
+debug.folder=debug
+cromwell.execution.folder=exec
+
+test.file.name=test
+
 fileTree-prefix=https://gitlab.com/api/v4/projects/10410163/repository/tree?path=
 fileTree-path=src/test/TestWDLParser
 fileTree-ref=&ref=dev
