--- a/api-dx/src/test/resources/application.properties
+++ b/api-dx/src/test/resources/application.properties
@@ -4,6 +4,8 @@ samples.folder=samples
 debug.folder=debug
 cromwell.execution.folder=exec
 
+cromwell.server=http://ec2-3-80-9-136.compute-1.amazonaws.com/api/workflows/v1
+
 test.file.name=test
 
 fileTree-prefix=https://gitlab.com/api/v4/projects/10410163/repository/tree?path=
