--- a/api-dx/src/test/resources/application.properties
+++ b/api-dx/src/test/resources/application.properties
@@ -4,7 +4,8 @@ samples.folder=samples
 debug.folder=debug
 cromwell.execution.folder=exec
 
-cromwell.server=http://ec2-3-80-9-136.compute-1.amazonaws.com/api/workflows/v1
+cromwell.server=http://localhost:8000/api/workflows/v1
+#cromwell.server=http://ec2-3-80-9-136.compute-1.amazonaws.com/api/workflows/v1
 
 test.file.name=test
 
