--- a/aws-conf/ecs-params.yml
+++ b/aws-conf/ecs-params.yml
@@ -3,8 +3,9 @@ task_definition:
   task_execution_role: ecsTaskExecutionRole
   ecs_network_mode: awsvpc
   task_size:
-    mem_limit: 1 GB
-    cpu_limit: 256
+    mem_limit: 4 GB
+    mem_reservation: 4 GB
+    cpu_limit: 512
 run_params:
   network_configuration:
     awsvpc_configuration:
